--- a/docker_elk_7.10.2/.env
+++ b/docker_elk_7.10.2/.env
@@ -10,7 +10,7 @@ COMPOSE_PROJECT_NAME=elk
 #
 # Superuser role, full access to cluster management and data indices.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-ELASTIC_PASSWORD='IkE68mcgIQCS2MD50owc'
+ELASTIC_PASSWORD='changeme'
 
 # User 'logstash_internal' (custom)
 #
@@ -22,7 +22,7 @@ LOGSTASH_INTERNAL_PASSWORD='changeme'
 #
 # The user Kibana uses to connect and communicate with Elasticsearch.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-KIBANA_PASSWORD='Yc0iUEWVHrupPIM2dfGU'
+KIBANA_PASSWORD='changeme'
 
 APM-SERVER_PASSWORD='changeme'
 
