--- a/docker_elk_7.10.2/.env
+++ b/docker_elk_7.10.2/.env
@@ -1,6 +1,10 @@
 # Version
 ELK_VERSION=7.10.2
 NODEJS_VERSION=lts-alpine3.17
+DENO_VERSION=1.30.3
+PYTHON_VERSION=3.8
+APACHE_VERSION=alpine3.17
+NGINX_VERSION=1.23.3-alpine-slim
 
 COMPOSE_PROJECT_NAME=elk
 
@@ -24,15 +28,22 @@ LOGSTASH_INTERNAL_PASSWORD='changeme'
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
 KIBANA_PASSWORD='changeme'
 
-APM-SERVER_PASSWORD='changeme'
+APM_SERVER_PASSWORD='changeme'
 
 
 ## Network
-SUBNET='172.16.0.0/16'
-DEFAULT_GATEWAY='172.16.0.1'
-ELASTIC_IP='172.16.1.0'
-KIBANA_IP='172.16.2.0'
-LOGSTASH_IP='172.16.3.0'
-APM_SERVER_IP='172.16.4.0'
-NODEJS_IP='172.16.9.0'
-JENKINS_IP='172.16.10'
+SUBNET=172.16.0.0/16
+DEFAULT_GATEWAY=172.16.0.1
+ELASTIC_IP=172.16.1.0
+KIBANA_IP=172.16.2.0
+LOGSTASH_IP=172.16.3.0
+APM_SERVER_IP=172.16.4.0
+HEARTBEAT_IP=172.16.5.0
+NODEJS_IP=172.16.9.0
+DENO_IP=172.16.10.0
+FLASK_IP=172.16.11.0
+APACHE_IP=172.16.12.0
+NGINX_IP=172.16.13.0
+JENKINS_IP=172.16.120.0
+
+
