--- a/docker_elk_7.10.2/apm-server/config/apm-server.yml
+++ b/docker_elk_7.10.2/apm-server/config/apm-server.yml
@@ -497,7 +497,7 @@ output.elasticsearch:
   # Scheme and port can be left out and will be set to the default (`http` and `9200`).
   # In case you specify and additional path, the scheme is required: `http://localhost:9200/path`.
   # IPv6 addresses should always be defined as: `https://[2001:db8::1]:9200`.
-  hosts: ["172.16.1.0:9200"]
+  hosts: ["${ELASTIC_IP}:9200"]
 
   # Boolean flag to enable or disable the output module.
   #enabled: true
@@ -510,8 +510,8 @@ output.elasticsearch:
 
   # Authentication credentials - either API key or username/password.
   #api_key: "id:api_key"
-  username: ${APM-SERVER_USERNAME}
-  password: ${APM-SERVER_PASSWORD}
+  username: ${ELASTIC_USERNAME}
+  password: ${ELASTIC_PASSWORD}
 
   # Dictionary of HTTP parameters to pass within the url with index operations.
   #parameters:
