--- a/docker_elk_7.10.2/kibana/config/kibana.yml
+++ b/docker_elk_7.10.2/kibana/config/kibana.yml
@@ -4,10 +4,10 @@
 #
 server.name: kibana
 server.host: 0.0.0.0
-elasticsearch.hosts: [ "http://172.16.0.1:9200" ]
+elasticsearch.hosts: [ "http://${ELASTIC_IP}:9200" ]
 xpack.monitoring.ui.container.elasticsearch.enabled: true
 
 ## X-Pack security credentials
 #
-elasticsearch.username: ${KIBANA_USERNAME}
-elasticsearch.password: ${KIBANA_PASSWORD}
+elasticsearch.username: ${ELASTIC_USERNAME}
+elasticsearch.password: ${ELASTIC_PASSWORD}
