--- a/docker_elk_7.10.2/logstash/pipeline/logstash.conf
+++ b/docker_elk_7.10.2/logstash/pipeline/logstash.conf
@@ -12,7 +12,7 @@ input {
 
 output {
 	elasticsearch {
-		hosts => "172.16.1.0:9200"
+		hosts => "${ELASTIC_IP}:9200"
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
 	}
