--- a/docker_elk_7.10.2/nodejs/Dockerfile
+++ b/docker_elk_7.10.2/nodejs/Dockerfile
@@ -1,6 +1,12 @@
+ARG ELK_VERSION
 ARG NODEJS_VERSION
 
+FROM docker.elastic.co/beats/filebeat:${ELK_VERSION} AS filebeat-env
+
 FROM node:${NODEJS_VERSION}
+
+COPY --from=filebeat-env /usr/share/filebeat /usr/share/filebeat
+
 ENV NODE_ENV production
 ENV NODE_PATH /usr/local/lib/node_modules
 
