--- a/docker_elk_7.10.2/.env
+++ b/docker_elk_7.10.2/.env
@@ -5,6 +5,7 @@ DENO_VERSION=1.30.3
 PYTHON_VERSION=3.8
 APACHE_VERSION=alpine3.17
 NGINX_VERSION=1.23.3-alpine-slim
+RUBY_VERSION=3.2.1-alpine3.17
 
 COMPOSE_PROJECT_NAME=elk
 
@@ -44,6 +45,7 @@ DENO_IP=172.16.10.0
 FLASK_IP=172.16.11.0
 APACHE_IP=172.16.12.0
 NGINX_IP=172.16.13.0
+RAILS_IP=172.16.14.0
 JENKINS_IP=172.16.120.0
 
 
