--- a/docker_elk_7.10.2/docker-compose.yml
+++ b/docker_elk_7.10.2/docker-compose.yml
@@ -212,6 +212,25 @@ services:
     depends_on:
       - elasticsearch
 
+  rails:
+    build:
+      context: ./rails
+      dockerfile: Dockerfile
+      args:
+        ELK_VERSION: ${ELK_VERSION}
+        RUBY_VERSION: ${RUBY_VERSION}
+    container_name: '${COMPOSE_PROJECT_NAME}-rails'
+    #volumes:
+      #- ./rails/src:/usr/src/
+    ports:
+      - "3001:3000"
+    networks:
+      elastic-net:
+        ipv4_address: ${RAILS_IP}
+    depends_on:
+      - elasticsearch
+
+
   jenkins:
     build:
       context: ./jenkins
