combine apache and filebeat

--- a/docker_elk_7.10.2/.env
+++ b/docker_elk_7.10.2/.env
@@ -1,9 +1,10 @@
 # Version
+## when you use `elastic`, `alpine` sould not be used because it's not supported on `elastic`.
 ELK_VERSION=7.10.2
 NODEJS_VERSION=lts-alpine3.17
 DENO_VERSION=1.30.3
-PYTHON_VERSION=3.8
-APACHE_VERSION=alpine3.17
+PYTHON_VERSION=3.8  
+APACHE_VERSION=2.4-bullseye 
 NGINX_VERSION=1.23.3-alpine-slim
 RUBY_VERSION=3.2.1-alpine3.17
 
