--- a/docker_elk_7.10.2/nodejs/src/package.json
+++ b/docker_elk_7.10.2/nodejs/src/package.json
@@ -6,9 +6,10 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
-},
+  },
   "dependencies": {
-      "express": "^4.16.1"
+    "elastic-apm-node": "^3.42.0",
+    "express": "^4.16.1"
   },
   "license": "ISC"
 }
