finish docker_elk_7.10,2

--- a/docker_elk_7.10.2/.env
+++ b/docker_elk_7.10.2/.env
@@ -5,7 +5,7 @@ NODEJS_VERSION=lts-alpine3.17
 DENO_VERSION=1.30.3
 PYTHON_VERSION=3.8  
 APACHE_VERSION=2.4-bullseye 
-NGINX_VERSION=1.23.3-alpine-slim
+NGINX_VERSION=1.23.3
 RUBY_VERSION=3.2.1-alpine3.17
 
 COMPOSE_PROJECT_NAME=elk
