--- a/docker_elk_7.10.2/apache/Dockerfile
+++ b/docker_elk_7.10.2/apache/Dockerfile
@@ -6,3 +6,5 @@ FROM docker.elastic.co/beats/filebeat:${ELK_VERSION} AS filebeat-env
 FROM httpd:${APACHE_VERSION}
 
 COPY --from=filebeat-env /usr/share/filebeat /usr/share/filebeat
+
+WORKDIR /usr/share/filebeat
