--- a/docker_elk_7.10.2/nginx/Dockerfile
+++ b/docker_elk_7.10.2/nginx/Dockerfile
@@ -1,3 +1,10 @@
+ARG ELK_VERSION
 ARG NGINX_VERSION
 
+FROM docker.elastic.co/beats/metricbeat:${ELK_VERSION} AS metricbeat-env
+
 FROM nginx:${NGINX_VERSION}
+
+COPY --from=metricbeat-env /usr/share/metricbeat /usr/share/metricbeat
+
+WORKDIR /usr/share/metricbeat
