--- a/docker_elk_7.10.2/apm-server/config/apm-server.yml
+++ b/docker_elk_7.10.2/apm-server/config/apm-server.yml
@@ -172,19 +172,19 @@ apm-server:
   # Enable Real User Monitoring (RUM) Support. By default RUM is disabled.
   # RUM does not support token based authorization. Enabled RUM endpoints will not require any authorization
   # token configured for other endpoints.
-  #rum:
-    #enabled: false
+  rum:
+    enabled: true
 
-    #event_rate:
+    event_rate:
 
       # Defines the maximum amount of events allowed to be sent to the APM Server RUM
       # endpoint per IP per second. Defaults to 300.
-      #limit: 300
+      limit: 300
 
       # An LRU cache is used to keep a rate limit per IP for the most recently seen IPs.
       # This setting defines the number of unique IPs that can be tracked in the cache.
       # Sites with many concurrent clients should consider increasing this limit. Defaults to 1000.
-      #lru_size: 1000
+      lru_size: 1000
 
     #-- General RUM settings
 
@@ -193,31 +193,31 @@ apm-server:
     # An origin is made of a protocol scheme, host and port, without the url path.
     # Allowed origins in this setting can have * to match anything (eg.: http://*.example.com)
     # If an item in the list is a single '*', everything will be allowed.
-    #allow_origins : ['*']
+    allow_origins : ['*']
 
     # A list of Access-Control-Allow-Headers to allow RUM requests, in addition to "Content-Type",
     # "Content-Encoding", and "Accept"
-    #allow_headers : []
+    allow_headers : []
 
     # Custom HTTP headers to add to RUM responses, e.g. for security policy compliance.
-    #response_headers :
-    #  X-My-Header: Contents of the header
+    response_headers :
+      X-My-Header: Contents of the header
 
     # Regexp to be matched against a stacktrace frame's `file_name` and `abs_path` attributes.
     # If the regexp matches, the stacktrace frame is considered to be a library frame.
-    #library_pattern: "node_modules|bower_components|~"
+    library_pattern: "node_modules|bower_components|~"
 
     # Regexp to be matched against a stacktrace frame's `file_name`.
     # If the regexp matches, the stacktrace frame is not used for calculating error groups.
     # The default pattern excludes stacktrace frames that have a filename starting with '/webpack'
-    #exclude_from_grouping: "^/webpack"
+    exclude_from_grouping: "^/webpack"
 
     # If a source map has previously been uploaded, source mapping is automatically applied.
     # to all error and transaction documents sent to the RUM endpoint.
-    #source_mapping:
+    source_mapping:
 
       # Sourcemapping is enabled by default.
-      #enabled: true
+      enabled: true
 
       # Source maps are always fetched from Elasticsearch, by default using the output.elasticsearch configuration.
       # A different instance must be configured when using any other output.
@@ -239,13 +239,13 @@ apm-server:
 
       # The `cache.expiration` determines how long a source map should be cached before fetching it again from Elasticsearch.
       # Note that values configured without a time unit will be interpreted as seconds.
-      #cache:
-        #expiration: 5m
+      cache:
+        expiration: 5m
 
       # Source maps are stored in a separate index.
       # If the default index pattern for source maps at 'outputs.elasticsearch.indices'
       # is changed, a matching index pattern needs to be specified here.
-      #index_pattern: "apm-*-sourcemap*"
+      index_pattern: "apm-*-sourcemap*"
 
   #---------------------------- APM Server - Agent Configuration ----------------------------
 
