--- a/docker_elk_7.10.2/docker-compose.yml
+++ b/docker_elk_7.10.2/docker-compose.yml
@@ -11,13 +11,13 @@ services:
     volumes:
       - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
       #- ./elasticsearch:/usr/share/elasticsearch/data:z
-    ports:
-      - "9200:9200"
-      - "9300:9300"
     environment:
       ES_JAVA_OPTS: -Xmx256m -Xms256m
       ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
       discovery.type: single-node
+    ports:
+      - "9200:9200"
+      - "9300:9300"
     networks:
       elastic-net:
         ipv4_address: ${ELASTIC_IP}
@@ -31,12 +31,13 @@ services:
     container_name: '${COMPOSE_PROJECT_NAME}-kibana'
     volumes:
       - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
-    ports:
-      - "5601:5601"
     environment:
       ELASTIC_USERNAME: elastic
       ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
       ELASTIC_IP: ${ELASTIC_IP}
+      KIBANA_IP: ${KIBANA_IP}
+    ports:
+      - "5601:5601"
     networks:
       elastic-net:
         ipv4_address: ${KIBANA_IP}
@@ -53,15 +54,15 @@ services:
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
+    environment:
+      LS_JAVA_OPTS: -Xmx256m -Xms256m
+      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD}
+      ELASTIC_IP: ${ELASTIC_IP}
     ports:
       - "5044:5044"
       - "5001:5000/tcp"
       - "5002:5000/udp"
       - "9600:9600"
-    environment:
-      LS_JAVA_OPTS: -Xmx256m -Xms256m
-      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD}
-      ELASTIC_IP: ${ELASTIC_IP}
     networks:
       elastic-net:
         ipv4_address: ${LOGSTASH_IP}
@@ -98,8 +99,6 @@ services:
     container_name: '${COMPOSE_PROJECT_NAME}-heartbeat'
     volumes:
       - ./heartbeat/config/heartbeat.yml:/usr/share/heartbeat/heartbeat.yml:ro,Z
-    #ports:
-    #  - "8200:8200"
     environment:
       ELASTIC_USERNAME: elastic
       ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
@@ -108,6 +107,8 @@ services:
       APM_SERVER_IP: ${APM_SERVER_IP}
       NODEJS_IP: ${NODEJS_IP}
       JENKINS_IP: ${JENKINS_IP}
+    #ports:
+    #  - "8200:8200"
     networks:
       elastic-net:
         ipv4_address: ${HEARTBEAT_IP}
@@ -185,13 +186,13 @@ services:
       - ./apache/src:/usr/local/apache2/htdocs
       - ./apache/config/httpd.conf:/usr/local/apache2/conf/httpd.conf
       - ./apache/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro,Z
-    ports:
-      - "80:80"
     environment:
       ELASTIC_USERNAME: elastic
       ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
       ELASTIC_IP: ${ELASTIC_IP}
       KIBANA_IP: ${KIBANA_IP}
+    ports:
+      - "80:80"
     networks:
       elastic-net:
         ipv4_address: ${APACHE_IP}
@@ -209,6 +210,12 @@ services:
     volumes:
       - ./nginx/config/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/src:/usr/share/nginx/html
+      - ./nginx/metricbeat/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml:ro,Z
+    environment:
+      ELASTIC_USERNAME: elastic
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
+      ELASTIC_IP: ${ELASTIC_IP}
+      KIBANA_IP: ${KIBANA_IP}
     ports:
       - "81:80"
     networks:
