--- a/docker_elk_7.10.2/kibana/config/kibana.yml
+++ b/docker_elk_7.10.2/kibana/config/kibana.yml
@@ -3,7 +3,7 @@
 ## https://github.com/elastic/kibana/blob/master/src/dev/build/tasks/os_packages/docker_generator/templates/kibana_yml.template.ts
 #
 server.name: kibana
-server.host: 0.0.0.0
+server.host: ${KIBANA_IP}
 elasticsearch.hosts: [ "http://${ELASTIC_IP}:9200" ]
 xpack.monitoring.ui.container.elasticsearch.enabled: true
 
